--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Wedding Invite Public Hosting</h1>
-    <p>This site serves publicly accessible wedding invites.</p>
+    <p>This site serves publicly accessible wedding invites for testing.</p>
     <ul>
         <li><a href="/public-invites/aadithyaAndsowmya.html">Aadithya & Sowmya Invite</a></li>
     </ul>
